<resources>
    <string name="app_name">Vincera</string>
    <string name="hint_email">E-Mail</string>
    <string name="hint_password">Passwort</string>
    <string name="btn_login">Anmelden</string>
    <string name="text_no_account">Noch kein Konto? Registrieren</string>
    <string name="login_success">Login erfolgreich</string>
    <string name="login_error">Login fehlgeschlagen</string>
    <string name="title_register">Registrieren</string>
    <string name="btn_register">Konto erstellen</string>
    <string name="register_success">Konto erstellt</string>
    <string name="register_error">Registrierung fehlgeschlagen</string>
    <string name="hint_name">Name</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="label_trained_today">Heute trainiert?</string>
    <string name="label_workout_count">Anzahl Workouts</string>
    <string name="label_last_training">Letztes Training</string>
    <string name="label_streak">Streak</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="no_data">-</string>
    <string name="btn_training_starten">Training starten</string>
    <string name="btn_trainingsplaene">Trainingspläne</string>
    <string name="btn_verlauf">Verlauf</string>
    <string name="btn_profil">Profil</string>
    <string name="trainingsplaene_title">Trainingspläne</string>
    <string name="hint_plan_name">Plan-Name</string>
    <string name="hint_uebungen">Übungen (mit Komma getrennt)</string>
    <string name="btn_erstellen">Erstellen</string>
    <string name="btn_bearbeiten">Bearbeiten</string>
    <string name="btn_loeschen">Löschen</string>
    <string name="btn_speichern">Speichern</string>
    <string name="btn_abbrechen">Abbrechen</string>
    <string name="dialog_title_new_plan">Neuen Trainingsplan erstellen</string>
    <string name="dialog_title_edit_plan">Trainingsplan bearbeiten</string>
    <string name="confirm_delete_plan">Diesen Trainingsplan wirklich löschen?</string>
    <string name="plan_saved">Plan gespeichert</string>
    <string name="plan_deleted">Plan gelöscht</string>
    <string name="workout_title">Workout</string>
    <string name="label_select_plan">Trainingsplan auswählen</string>
    <string name="label_select_uebung">Übung auswählen</string>
    <string name="hint_gewicht">Gewicht (kg)</string>
    <string name="hint_wiederholungen">Wiederholungen</string>
    <string name="hint_saetze">Sätze</string>
    <string name="btn_training_speichern">Training speichern</string>
    <string name="workout_saved">Training gespeichert</string>
    <string name="workout_error">Speichern fehlgeschlagen</string>
    <string name="msg_no_plans">Bitte zuerst einen Trainingsplan erstellen</string>
    <string name="verlauf_title">Verlauf</string>
    <string name="btn_filter">Filter</string>
    <string name="btn_details">Details</string>
    <string name="label_filter_plan">Nach Plan filtern</string>
    <string name="label_filter_datum">Nach Datum filtern (tt.mm.jjjj)</string>
    <string name="option_alle">Alle</string>
    <string name="btn_anwenden">Anwenden</string>
    <string name="msg_no_workouts">Noch keine Trainingseinträge vorhanden</string>
    <string name="profil_title">Profil</string>
    <string name="hint_gewicht_profil">Gewicht (kg)</string>
    <string name="hint_zielgewicht">Zielgewicht (kg)</string>
    <string name="hint_trainingsziel">Trainingsziel</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_passwort_zuruecksetzen">Passwort zurücksetzen</string>
    <string name="profile_saved">Profil gespeichert</string>
    <string name="profile_error">Speichern fehlgeschlagen</string>
    <string name="reset_email_sent">Reset-E-Mail gesendet</string>
</resources>