<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".ProfilActivity">

    <TextView
        android:id="@+id/tvProfilTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profil_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/etProfilName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@id/tvProfilTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp" />

    <EditText
        android:id="@+id/etProfilGewicht"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_gewicht_profil"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/etProfilName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/etProfilZielgewicht"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_zielgewicht"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/etProfilGewicht"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/etProfilTrainingsziel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_trainingsziel"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/etProfilZielgewicht"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/btnProfilSpeichern"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_speichern"
        app:layout_constraintTop_toBottomOf="@id/etProfilTrainingsziel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_logout"
        app:layout_constraintTop_toBottomOf="@id/btnProfilSpeichern"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp" />

    <Button
        android:id="@+id/btnPasswortZuruecksetzen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_passwort_zuruecksetzen"
        app:layout_constraintTop_toBottomOf="@id/btnLogout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:menu="@menu/bottom_nav_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>